--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br" class="light">
-  <!-- SEPARATOR -->
+  <!-- METADATA -->
   <head>
     <title>Rocket Seat Project</title>
     <link rel="stylesheet" href="./style.css" />
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <!-- SEPARATOR -->
   <body>
